@@ -12,13 +12,13 @@ package tut.model;
 public class LocaleDyn extends Locale {
   LooseDyn body = null;
   double morbidity = 0.0;
-  public double pain = Double.NaN;
-  public final double painMax = 10.0;
+  public double symptom = Double.NaN;
+  public final double symptomMax = 10.0;
   double reliefBottom = Double.NaN, reliefTop = Double.NaN;
   boolean controller = false;
   public void setController(boolean c, double rb, double rt) { 
     controller = c; 
-    pain = 0.0;
+    symptom = 0.0;
     if (c && rt <= 0.0) throw new RuntimeException("reliefTop <= 0.0, set morbidity = 0 disable it");
     if (rt > rb) {
       reliefBottom = rb;
@@ -28,7 +28,7 @@ public class LocaleDyn extends Locale {
   
   public LocaleDyn(LooseDyn b, int i, double start, double v) {
     super(i,start,v);
-    particles.put("Marker", new sim.util.MutableDouble(0.0));
+    particles.put("MP", new sim.util.MutableDouble(0.0));
     if (b != null) body = b;
     else throw new RuntimeException("body can't be null.");
   }
@@ -43,32 +43,32 @@ public class LocaleDyn extends Locale {
     
     if (morbidity > 0.0) handleMorbidity();
     if (controller) {
-      eliminateMarker();
-      relievePain();
+      createSymptom();
+      relieveSymptom();
     }
   }
   
   private void handleMorbidity() {
-    particles.get("Marker").val += morbidity
-            * body.params.looseDyn.get("morb2mark").doubleValue();
+    particles.get("MP").val += morbidity
+            * body.params.looseDyn.get("morb2mp").doubleValue();
   }
   
-  private void eliminateMarker() {
-    sim.util.MutableDouble marker = particles.get("Marker");
-    if (pain < painMax && marker.val > 0.0) {
-      double inc = body.params.looseDyn.get("mark2pain").doubleValue()*marker.val;
-      pain += inc;
-      if (pain > painMax) pain = painMax;
-      marker.val -= inc;
-      if (marker.val < 0.0) marker.val = 0.0;
+  private void createSymptom() {
+    sim.util.MutableDouble mp = particles.get("MP");
+    if (symptom < symptomMax && mp.val > 0.0) {
+      double inc = body.params.looseDyn.get("mp2symptom").doubleValue()*mp.val;
+      symptom += inc;
+      if (symptom > symptomMax) symptom = symptomMax;
+      mp.val -= inc;
+      if (mp.val < 0.0) mp.val = 0.0;
     }
   }
   
-  private void relievePain() {
+  private void relieveSymptom() {
     double drug = particles.get("Drug").val;
-    double dec = body.params.looseDyn.get("drug2pain").doubleValue()*drug;
-    tut.ctrl.Batch.log("drug = "+drug+", ["+reliefBottom+","+reliefTop+"], pain = "+pain);
-    if (reliefBottom <= drug && drug <= reliefTop) pain -= dec;
-    if (pain < 0.0) pain = 0.0;
+    double dec = body.params.looseDyn.get("drug2symptom").doubleValue()*drug;
+    //tut.ctrl.Batch.log("drug = "+drug+", ["+reliefBottom+","+reliefTop+"], symptom = "+symptom);
+    if (reliefBottom <= drug && drug <= reliefTop) symptom -= dec;
+    if (symptom < 0.0) symptom = 0.0;
   }
 }
