@@ -11,22 +11,22 @@ package tut.view;
 
 import tut.model.LooseDyn;
 
-public class ObsPain extends Obs {
-  public ObsPain(String en, tut.ctrl.Parameters p) {
+public class ObsSymptom extends Obs {
+  public ObsSymptom(String en, tut.ctrl.Parameters p) {
     super(en,p);
   }
 
   @Override
   public void init(java.io.File dir, tut.model.Model m) {
     super.init(dir,m);
-    if (!(m instanceof LooseDyn)) throw new RuntimeException("Pain can only be measured from LooseDyn");
+    if (!(m instanceof LooseDyn)) throw new RuntimeException("Symptom can only be measured from LooseDyn");
   }
   
   @Override
   public java.util.ArrayList<Double> measure() {
     java.util.ArrayList<Double> retVal = new java.util.ArrayList<>();
     subject.comps.stream().forEach((c) -> {
-      retVal.add(((tut.model.LocaleDyn)c).pain);
+      retVal.add(((tut.model.LocaleDyn)c).symptom);
     });
     return retVal;
   }
